--- a/index.html
+++ b/index.html
@@ -283,12 +283,12 @@
                     <div class="space-y-16">
                         <div class="relative pl-14 group">
                             <span class="absolute left-0 top-0 text-5xl font-serif opacity-10 group-hover:opacity-20 transition-opacity text-black">01</span>
-                            <h3 class="text-2xl font-serif mb-4 text-black font-bold">1️⃣ Plantation & Natural Growth</h3>
+                            <h3 class="text-2xl font-serif mb-4 text-black font-bold">Plantation & Natural Growth</h3>
                             <p class="text-sm opacity-70 leading-relaxed text-black">Our journey begins in rich, fertile soil where coffee and pepper plants grow under natural shade. The estate follows traditional farming practices that respect the land, climate, and biodiversity.</p>
                         </div>
                         <div class="relative pl-14 group">
                             <span class="absolute left-0 top-0 text-5xl font-serif opacity-10 group-hover:opacity-20 transition-opacity text-black">02</span>
-                            <h3 class="text-2xl font-serif mb-4 text-black font-bold">2️⃣ Flowering Stage</h3>
+                            <h3 class="text-2xl font-serif mb-4 text-black font-bold">Flowering Stage</h3>
                             <p class="text-sm opacity-70 leading-relaxed text-black">Seasonal rains trigger beautiful white coffee blossoms and healthy pepper spikes. This stage defines the future quality and aroma of the produce.</p>
                         </div>
                     </div>
@@ -307,12 +307,12 @@
                     <div class="order-1 md:order-2 space-y-16">
                         <div class="relative pl-14 group">
                             <span class="absolute left-0 top-0 text-5xl font-serif opacity-10 group-hover:opacity-20 transition-opacity text-black">03</span>
-                            <h3 class="text-2xl font-serif mb-4 text-black font-bold">3️⃣ Cherry & Pepper Development</h3>
+                            <h3 class="text-2xl font-serif mb-4 text-black font-bold">Cherry & Pepper Development</h3>
                             <p class="text-sm opacity-70 leading-relaxed text-black">Coffee cherries slowly ripen from green to deep red, while pepper berries mature on climbing vines. Careful monitoring ensures optimal ripeness.</p>
                         </div>
                         <div class="relative pl-14 group">
                             <span class="absolute left-0 top-0 text-5xl font-serif opacity-10 group-hover:opacity-20 transition-opacity text-black">04</span>
-                            <h3 class="text-2xl font-serif mb-4 text-black font-bold">4️⃣ Hand Harvesting</h3>
+                            <h3 class="text-2xl font-serif mb-4 text-black font-bold">Hand Harvesting</h3>
                             <p class="text-sm opacity-70 leading-relaxed text-black">Only mature coffee cherries and healthy pepper spikes are handpicked. This selective harvesting preserves flavor integrity and ensures premium quality.</p>
                         </div>
                     </div>
@@ -323,12 +323,12 @@
                     <div class="space-y-16">
                         <div class="relative pl-14 group">
                             <span class="absolute left-0 top-0 text-5xl font-serif opacity-10 group-hover:opacity-20 transition-opacity text-black">05</span>
-                            <h3 class="text-2xl font-serif mb-4 text-black font-bold">5️⃣ Sun Drying</h3>
+                            <h3 class="text-2xl font-serif mb-4 text-black font-bold">Sun Drying</h3>
                             <p class="text-sm opacity-70 leading-relaxed text-black">Freshly harvested produce is naturally sun-dried on raised mats. This slow, traditional drying process enhances aroma and shelf stability without artificial heat.</p>
                         </div>
                         <div class="relative pl-14 group">
                             <span class="absolute left-0 top-0 text-5xl font-serif opacity-10 group-hover:opacity-20 transition-opacity text-black">06</span>
-                            <h3 class="text-2xl font-serif mb-4 text-black font-bold">6️⃣ Processing & Sorting</h3>
+                            <h3 class="text-2xl font-serif mb-4 text-black font-bold">Processing & Sorting</h3>
                             <p class="text-sm opacity-70 leading-relaxed text-black">Coffee beans are hulled and graded, while peppercorns are cleaned and sorted. Defective or broken produce is removed to maintain consistency.</p>
                         </div>
                     </div>
@@ -347,12 +347,12 @@
                     <div class="order-1 md:order-2 space-y-16">
                         <div class="relative pl-14 group">
                             <span class="absolute left-0 top-0 text-5xl font-serif opacity-10 group-hover:opacity-20 transition-opacity text-black">07</span>
-                            <h3 class="text-2xl font-serif mb-4 text-black font-bold">7️⃣ Final Green Beans & Peppercorns</h3>
+                            <h3 class="text-2xl font-serif mb-4 text-black font-bold">Final Green Beans & Peppercorns</h3>
                             <p class="text-sm opacity-70 leading-relaxed text-black">The result is high-quality green coffee beans and bold, aromatic peppercorns—ready for roasting, trading, or further artisanal processing.</p>
                         </div>
                         <div class="relative pl-14 group">
                             <span class="absolute left-0 top-0 text-5xl font-serif opacity-10 group-hover:opacity-20 transition-opacity text-black">08</span>
-                            <h3 class="text-2xl font-serif mb-4 text-black font-bold">8️⃣ Farm to Legacy</h3>
+                            <h3 class="text-2xl font-serif mb-4 text-black font-bold">Farm to Legacy</h3>
                             <p class="text-sm opacity-70 leading-relaxed text-black">Every batch carries the story of our land, our people, and generations of farming knowledge—crafted with patience, pride, and purity.</p>
                         </div>
                     </div>
@@ -823,3 +823,4 @@
     </script>
 </body>
 </html>
+
